HelloUltraviolet/Fixtures/RejectedSource/Parallelism/DispatchNonAssociativeReduce/Expected.uv
//! Expected diagnostic metadata for the DispatchNonAssociativeReduce rejected-source specimen.

expectedDiagnostic("E-CON-0143", "rule.20.Dispatch-Reduce-Assoc-Err")
